Add Specialization Filter to Student Doctor
